# yew-wysiwyg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml  wasm-size.yml
yew-wysiwyg/: Cargo.toml
yew-wysiwyg-demo/: Cargo.toml  Trunk.toml  index.html
yew-wysiwyg-demo/src/: main.rs
yew-wysiwyg/src/: error.rs  lib.rs  serialization.rs
yew-wysiwyg/src/core/: mod.rs  registry.rs  theme.rs  widget.rs
yew-wysiwyg/src/editor/: canvas.rs  config_panel.rs  mod.rs  palette.rs  toolbar.rs
yew-wysiwyg/src/widgets/: basic.rs  container.rs  mod.rs  text.rs
