[workspace]
resolver = "2"
members = [
    "yew-wysiwyg",
    "yew-wysiwyg-demo",
]

[workspace.package]
version = "0.1.0"
authors = ["Milan Šťastný <milan@stastnej.ch"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/yew-wysiwyg"
keywords = ["yew", "wysiwyg", "editor", "cms", "wasm"]
categories = ["wasm", "web-programming", "gui"]

[workspace.dependencies]
# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"

# Web APIs
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"
log = "0.4"
wasm-logger = "0.2"
pulldown-cmark = "0.12"
indexmap = { version = "2.0", features = ["serde"] }

# Demo dependencies
gloo = "0.11"
gloo-console = "0.3"
